--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -7,3 +6,6 @@ build/
 
 ### IntelliJ IDEA ###
 .idea
+
+### Mac OS ###
+.DS_Store
