--- a/.github/workflows/batch.yaml
+++ b/.github/workflows/batch.yaml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: GITHUB_REF
-        run : echo "$GITHUB_REF"
+      - name: git remote -v
+        run : git remote -v
