--- a/.github/workflows/batch.yaml
+++ b/.github/workflows/batch.yaml
@@ -39,20 +39,34 @@ jobs:
         run: gradle clean :batch:buildJar
 
       - name: Run batch package
-        run: java -jar ./batch/build/libs/batch.jar
+        run: |
+          java -jar ./batch/build/libs/batch.jar
+          echo ::set-output name=exit_code::$?
 
       - name: Replace SECRET_KEY originally
+        if: steps.build.outputs.exit_code == 0
         run: |
           sed -i -r "s/^(serviceKey =).*/\1 SERVICE_KEY/" ./batch/src/main/resources/application.conf
           cat batch/src/main/resources/application.conf
 
+      - name: git config name, email
+        if: steps.build.outputs.exit_code == 0
+        env:
+          user_name: ${{ vars.USER_NAME }}
+          user_email: ${{ vars.USER_EMAIL }}
+        run: |
+          git config --global user.email $user_email
+          git config --global user.name $user_name
+
       - name: Commit and Push
+        if: steps.build.outputs.exit_code == 0
         run: |
           git add .
           git commit -m "[ACTIONS] feat: Run batch to update core"
           git push
 
       - name: Tag and Push
+        if: steps.build.outputs.exit_code == 0
         env:
           NEW_TAG: date +"%y.%m.%d"
         run: |
