--- a/.github/workflows/batch.yaml
+++ b/.github/workflows/batch.yaml
@@ -2,6 +2,8 @@ name: Batch Kolidays
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   batch-kolidays:
@@ -9,5 +11,73 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: GITHUB_REF
-        run : echo "$GITHUB_REF"
+      - name: Replace SECRET_KEY
+        env:
+          SERVICE_KEY: ${{ secrets.SERVICE_KEY }}
+        run: |
+          sed -i -r "s/^(serviceKey =).*/\1 $SERVICE_KEY/" ./batch/src/main/resources/application.conf
+          cat batch/src/main/resources/application.conf
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Build batch package
+        run: gradle clean :batch:buildJar
+
+      - name: Run batch package
+        run: |
+          exit_code=-1
+          java -jar ./batch/build/libs/batch.jar && exit_code=0 || exit_code=1
+          echo "EXIT_CODE=$exit_code" >> "$GITHUB_ENV"
+
+      - name: Replace SECRET_KEY originally
+        if: env.EXIT_CODE == 0
+        run: |
+          sed -i -r "s/^(serviceKey =).*/\1 SERVICE_KEY/" ./batch/src/main/resources/application.conf
+          cat batch/src/main/resources/application.conf
+
+      - name: git config name, email
+        if: env.EXIT_CODE == 0
+        env:
+          user_name: ${{ vars.USER_NAME }}
+          user_email: ${{ vars.USER_EMAIL }}
+        run: |
+          git config --global user.email $user_email
+          git config --global user.name $user_name
+
+      - name: Commit and Push
+        if: env.EXIT_CODE == 0
+        run: |
+          git add .
+          git commit -m "[ACTIONS] feat: Run batch to update core"
+          git push
+
+      - name: Tag and Push
+        if: env.EXIT_CODE == 0
+        run: |
+          NEW_DATE=$(date +"%y.%m.%d")
+          git tag -a "${NEW_DATE}" -m ":octocat:"
+          git push --tags
+
+      - name: Cleanup Gradle Cache
+        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
+        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
+        run: |
+          rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          rm -f ~/.gradle/caches/modules-2/gc.properties
